# migration_usb

./: .gitignore  README.md  create_folder_structure.py  pyproject.toml  requirements.txt
config/: usb_config.json
data_preparation/: call_the_api.ipynb
mapping_files/: _user_mapping.json  user_department.tsv  user_groups.tsv  user_mapping.json
