[tool.poetry]
name = "migration-repo-template"
version = "0.1.0"
description = "Template project for FOLIO migrations using FOLIO-FSE/folio_migration_tools"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.9"
folio-migration-tools = "^1.8.11"
jupyter = "^1.0.0"
ipykernel = "^6.29.5"
pandas = "^2.2.2"
polars = "^1.1.0"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
